Added timer and it is working. Need to add the ability to popup the loss screen once time runs out

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
 	background-color: lightblue;
 	height: 500px;
 	display: hidden;
-	opacity: 0.3;
-	font-family: 'Bangers', cursive; ;
+	opacity: 0.5;
+	font-family: 'Bangers', cursive; 
+	text-align: center;
 }
